<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/bg_bottom_sheet_dialog_fragment"
    android:id="@+id/parentView">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        tools:background="@color/black"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="coming_soon.json"
        android:id="@+id/lottieView"/>

    <TextView
        fontPath="fonts/Montserrat-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/coming_soon"
        android:textAlignment="viewStart"
        android:textColor="#5F5F5F"
        android:textSize="12sp"
        android:id="@+id/comingSoonMessage"
        app:layout_constraintBottom_toTopOf="@id/warningNoteTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingPrefix"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:textSize="12sp"
        android:id="@+id/warningNoteTv"
        android:lineSpacingMultiplier="1.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FF1F1F"
        tools:textStyle="bold"
        fontPath="fonts/Montserrat-Bold.ttf"
        android:text="@string/note_coming_soon"
        app:layout_constraintTop_toBottomOf="@id/comingSoonMessage"
        app:layout_constraintBottom_toTopOf="@id/rateUsButton"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_us_5_stars"
        tools:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_coming_soon_button"
        fontPath="fonts/Montserrat-Bold.ttf"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/shareAppButton"
        android:id="@+id/rateUsButton"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/share_app"
        tools:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_coming_soon_button"
        fontPath="fonts/Montserrat-Bold.ttf"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rateUsButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/shareAppButton"
        tools:ignore="MissingPrefix" />

</androidx.constraintlayout.widget.ConstraintLayout>